Merge pull request #2
* Done

* README