@@ -1,17 +1,18 @@
 package de.nosetr.mail.service;
 
-import it.ozimov.springboot.mail.model.Email;
-import it.ozimov.springboot.mail.service.EmailService;
-import it.ozimov.springboot.mail.service.exception.CannotSendEmailException;
+import de.nosetr.mail.config.MailFromProperties;
+import jakarta.mail.internet.MimeMessage;
 import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.test.context.TestPropertySource;
 
+import jakarta.mail.Address;
+import jakarta.mail.internet.InternetAddress;
 import java.util.List;
-import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.*;
@@ -23,7 +24,7 @@ import static org.mockito.Mockito.*;
     "MAIL_USERNAME=test",
     "MAIL_PASSWORD=test",
     "MAIL_FROM_EMAIL=test@example.com",
-    "MAIL_FROM_NAME=Test",
+    "MAIL_FROM_NAME=Test Absender",
     "MAIL_SUBJECT=Test-Einladung"
 })
 class ProcessServiceIntegrationTest {
@@ -31,36 +32,40 @@ class ProcessServiceIntegrationTest {
   @Autowired
   private ProcessService processService;
 
+  @Autowired
+  private MailFromProperties mailFromProperties;
+
   @MockBean
-  private EmailService emailService;
+  private JavaMailSender javaMailSender;
 
   @Test
-  void testSendTemplatedEmails_sendsCorrectEmails() throws CannotSendEmailException {
+  void testSendTemplatedEmails_sendsCorrectEmails() throws Exception {
+    // Arrange
+    MimeMessage mockMessage = mock(MimeMessage.class);
+    when(javaMailSender.createMimeMessage()).thenReturn(mockMessage);
+
+    String templateName = "default_template";
+    String csvFile = "default_recipients";
+    String subject = "Test-Einladung";
+
     // Act
-    processService.sendTemplatedEmails();
+    processService.sendTemplatedEmails(templateName, csvFile, subject);
 
     // Assert
-    ArgumentCaptor<Email> emailCaptor = ArgumentCaptor.forClass(Email.class);
-    ArgumentCaptor<String> templateCaptor = ArgumentCaptor.forClass(String.class);
+    // Verify send was called 3 times
+    verify(javaMailSender, times(3)).send(mockMessage);
 
-    @SuppressWarnings("unchecked")
-    ArgumentCaptor<Map<String, Object>> modelCaptor = ArgumentCaptor.forClass(Map.class);
+    // Optionally capture and verify addresses set in the message
+    ArgumentCaptor<MimeMessage> messageCaptor = ArgumentCaptor.forClass(MimeMessage.class);
+    verify(javaMailSender, times(3)).send(messageCaptor.capture());
 
-    verify(emailService, times(3)).send(emailCaptor.capture(), templateCaptor.capture(), modelCaptor.capture());
+    List<MimeMessage> sentMessages = messageCaptor.getAllValues();
+    assertThat(sentMessages).hasSize(3);
 
-    List<Email> sentEmails = emailCaptor.getAllValues();
-    List<Map<String, Object>> models = modelCaptor.getAllValues();
-
-    assertThat(sentEmails).hasSize(3);
-    assertThat(templateCaptor.getValue()).isEqualTo("invitation_template.ftl");
-
-    assertThat(models.get(0).get("name")).isEqualTo("Max Mustermann");
-    assertThat(models.get(0).get("email")).isEqualTo("max@beispiel.de");
-
-    assertThat(models.get(1).get("name")).isEqualTo("Erika Musterfrau");
-    assertThat(models.get(1).get("email")).isEqualTo("erika@beispiel.de");
-
-    assertThat(models.get(2).get("name")).isEqualTo("Hans Beispiel");
-    assertThat(models.get(2).get("email")).isEqualTo("hans@example.com");
+    // Spot-check one of the messages
+    MimeMessage firstMessage = sentMessages.getFirst();
+    verify(firstMessage, atLeastOnce()).setSubject(subject, "UTF-8");
+    verify(firstMessage, atLeastOnce()).setFrom(any(InternetAddress.class));
+    verify(firstMessage, atLeastOnce()).setRecipient(eq(MimeMessage.RecipientType.TO), any(Address.class));
   }
 }
